test/algeff/wrong/ops4.kk.out
test/algeff/wrong/ops4.kk(12, 3): error: operator set is not handled